--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
-    <link href="css/index.css" rel="stylsheet" type="text/css">
+    <link href="css/index.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
